--- a/src/app/pages/admin/request-demo-page/request-demo-page.component.html
+++ b/src/app/pages/admin/request-demo-page/request-demo-page.component.html
@@ -29,8 +29,8 @@
       <select id="status" (ngModelChange)="filterByStatus($event)" [(ngModel)]="isState"
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500">
         <option ngValue="All" selected>Todos</option>
-        <option ngValue="Atendido">Atendido</option>
         <option ngValue="Pendiente">Pendiente</option>
+        <option ngValue="Atendido">Atendido</option>
       </select>
     </div>
   </div>
@@ -62,7 +62,7 @@
             <span
               class="inline-flex items-center bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full"
               [ngClass]="{
-              'bg-yellow-100 text-yellow-800': item.storeStatus === 'Pendiente'
+              'bg-red-100 text-red-800': item.storeStatus === 'Pendiente'
             }">
               {{ item.storeStatus }}
             </span>
