feat: model init with css

--- a/src/app/shared/side-menu/side-menu.component.html
+++ b/src/app/shared/side-menu/side-menu.component.html
@@ -116,7 +116,7 @@
   </div>
 </aside>
 
-<div class="p-0 sm:ml-64">
+<div class="p-0 sm:ml-64 -mt-9">
   <app-navbar />
   <router-outlet />
 </div>
