feat: security user create

--- a/src/app/pages/admin/list-user-page/list-user-page.component.html
+++ b/src/app/pages/admin/list-user-page/list-user-page.component.html
@@ -91,7 +91,7 @@
     <tbody>
       @for (item of paginatedData; track item.id) {
       <tr
-        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600 first:bg-amber-600 last:bg-rose-400"
+        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
       >
         <th
           scope="row"
