--- a/src/app/pages/admin/user-detail-page/user-detail-security-page/user-detail-security-page.component.html
+++ b/src/app/pages/admin/user-detail-page/user-detail-security-page/user-detail-security-page.component.html
@@ -1,1 +1,71 @@
-<p>user-detail-security-page works!</p>,
+@if (userInfo()) {
+<div
+  class="p-5 border rounded-lg shadow-sm border-gray-300 dark:border-gray-700"
+>
+  <div class="flex justify-between items-center mb-4">
+    <h4 class="text-lg font-bold">Perfil de seguridad</h4>
+    <p class="text-sm text-gray-500">
+      <i class="fa-regular fa-pen-to-square px-4"></i>
+    </p>
+  </div>
+  <div
+    class="flex justify-between items-center border-b border-gray-300 dark:border-gray-700 md:mb-6 sm:mb-2 px-4"
+  >
+    <h4 class="text-lg">Usuario acceso</h4>
+    <p class="text-sm text-gray-500">{{ userInfo().nameUser }}</p>
+  </div>
+  <div
+    class="flex justify-between items-center border-b border-gray-300 dark:border-gray-700 md:mb-6 sm:mb-2 px-4"
+  >
+    <h4 class="text-lg">Contraseña</h4>
+    <p class="text-sm text-gray-500">**********</p>
+  </div>
+  <div
+    class="flex justify-between items-center border-b border-gray-300 dark:border-gray-700 md:mb-6 sm:mb-2 px-4"
+  >
+    <h4 class="text-lg">Rol</h4>
+    <p class="text-sm text-gray-500">{{ userInfo().rol }}</p>
+  </div>
+  <div
+    class="flex justify-between items-center border-b border-gray-300 dark:border-gray-700 md:mb-6 sm:mb-2 px-4"
+  >
+    <h4 class="text-lg">Estado</h4>
+    <p
+      class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
+      [ngClass]="{
+      'bg-green-100 text-green-800':
+        userInfo().status == 'Activo',
+      'bg-yellow-100 text-yellow-800':
+        userInfo().status === 'Inactivo',
+
+    }"
+    >
+      {{ userInfo().status }}
+    </p>
+  </div>
+</div>
+<div
+  class="p-5 border rounded-lg shadow-sm border-gray-300 dark:border-gray-700"
+>
+  <h4 class="text-lg font-bold">Autenticación en dos pasos</h4>
+  <p class="text-sm text-gray-500">
+    Mantenga su cuenta más seguro con un segundo paso de autenticación
+  </p>
+  <button
+    type="button"
+    class="text-white my-4 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 focus:outline-violet-500 active:bg-violet-700"
+  >
+    Habilitar dos pasos
+  </button>
+  <div class="flex justify-between items-center mb-4">
+    <div>
+      <h4 class="text-lg font-bold">SMS</h4>
+      <p class="text-sm text-gray-500">855454664 4566</p>
+    </div>
+    <p class="text-sm text-gray-500">
+      <i class="fa-regular fa-pen-to-square px-4"></i>
+      <i class="fa-solid fa-trash px-4"></i>
+    </p>
+  </div>
+</div>
+}
