--- a/src/app/pages/admin/user-detail-page/user-detail-page.component.html
+++ b/src/app/pages/admin/user-detail-page/user-detail-page.component.html
@@ -65,19 +65,25 @@
         *ngIf="selectedTab === 'selectSecurityUser'"
         class="p-10 bg-white rounded-lg dark:bg-gray-800"
       >
+        @if (userInfo) {
         <tyn-user-detail-security-page [userInfo]="userInfo" />
+        }
       </div>
       <div
         *ngIf="selectedTab === 'selectDetailUser'"
         class="p-4 bg-white rounded-lg dark:bg-gray-800"
       >
+        @if (userInfo) {
         <tyn-user-detail-actions-page [userInfo]="userInfo" />
+        }
       </div>
       <div
         *ngIf="selectedTab === 'selectPrivacityUser'"
         class="p-4 bg-white rounded-lg dark:bg-gray-800"
       >
+        @if (userInfo) {
         <tyn-user-detail-privilege-page [userInfo]="userInfo" />
+        }
       </div>
     </div>
     <div class="col-span-4 p-10 bg-white rounded-lg dark:bg-gray-800 mt-20">
