--- a/src/app/pages/admin/user-detail-page/user-detail-privilege-page/user-detail-privilege-page.component.html
+++ b/src/app/pages/admin/user-detail-page/user-detail-privilege-page/user-detail-privilege-page.component.html
@@ -1,1 +1,25 @@
-<p>user-detail-privilege-page works!</p>,
+<div
+  class="p-5 border rounded-lg shadow-sm border-gray-300 dark:border-gray-700"
+>
+  <h4 class="text-lg font-bold">Permisos especiales</h4>
+  <div
+    class="flex justify-between items-center border-b border-gray-300 dark:border-gray-700 md:mb-6 sm:mb-2 p-4"
+  >
+    @for (item of specialPrivileges; track item.id) {
+    <div class="flex items-center">
+      <input
+        [checked]="item.checked"
+        id="checked-checkbox"
+        type="checkbox"
+        value=""
+        class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+      />
+      <label
+        for="checked-checkbox"
+        class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300"
+        >{{ item.name }}</label
+      >
+    </div>
+    }
+  </div>
+</div>
