--- a/src/app/pages/admin/user-detail-page/user-detail-page.component.html
+++ b/src/app/pages/admin/user-detail-page/user-detail-page.component.html
@@ -82,7 +82,7 @@
         class="p-4 bg-white rounded-lg dark:bg-gray-800"
       >
         @if (userInfo) {
-        <tyn-user-detail-privilege-page [userInfo]="userInfo" />
+        <tyn-user-detail-privilege-page />
         }
       </div>
     </div>
