--- a/src/styles.css
+++ b/src/styles.css
@@ -19,4 +19,6 @@
     "Liberation Mono", "Courier New", "monospace";
   --spacing-8xl: 90rem;
   --text-2xs: 0.625rem;
+
+  --color-primary: ##7c3aed;
 }
