--- a/src/app/pages/admin/list-role-page/list-role-page.component.html
+++ b/src/app/pages/admin/list-role-page/list-role-page.component.html
@@ -1,6 +1,17 @@
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10">
-  <div class="mb-6 text-gray-900 dark:text-white">
+  <div
+    class="mb-6 text-gray-900 dark:text-white flex items-center justify-between"
+  >
     <h1 class="text-2xl font-semibold">Lista de roles</h1>
+
+    <button
+      type="button"
+      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 focus:outline-violet-500 active:bg-violet-700"
+      (click)="isModalOpen.set(true)"
+    >
+      <i class="fa-solid fa-plus ms-2"></i>
+      Agregar rol
+    </button>
   </div>
   <!-- Búsqueda general -->
   <div class="flex items-center justify-between pb-4">
@@ -182,3 +193,61 @@
     </ul>
   </nav>
 </div>
+
+<!-- Modal -->
+@if (isModalOpen()) {
+<div
+  class="fixed inset-0 bg-black opacity-50 z-40"
+  (click)="isModalOpen.set(false)"
+></div>
+}
+<!-- Main modal -->
+<div
+  id="default-modal"
+  tabindex="-1"
+  aria-hidden="true"
+  [ngClass]="isModalOpen() ? 'block' : 'hidden'"
+  class="fixed inset-0 z-50 flex items-center justify-center"
+>
+  <div
+    class="relative w-full max-w-3xl m-4 md:max-h-[90vh] bg-white rounded-lg shadow dark:bg-gray-700 overflow-hidden"
+  >
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <!-- Modal header -->
+      <div
+        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
+      >
+        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+          Crear Rol
+        </h3>
+        <button
+          type="button"
+          (click)="isModalOpen.set(false)"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+          data-modal-hide="default-modal"
+        >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <tyn-form-new-role-page />
+    </div>
+  </div>
+</div>
+<!-- End Modal content -->
