--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -184,7 +184,7 @@
             Usuarios conectados
           </h5>
           <a
-            (click)="routeLink('list-user')"
+            (click)="routeLink('list-user-admin')"
             class="text-sm font-medium text-purple-600 hover:underline dark:text-purple-500 cursor-pointer"
           >
             Ver todos los usuarios
