--- a/src/app/pages/admin/list-store-page/list-store-page.component.html
+++ b/src/app/pages/admin/list-store-page/list-store-page.component.html
@@ -1,1 +1,25 @@
-<p>list-store-page works!</p>,
+<div class="px-6 text-gray-900 dark:text-white">
+  <div class="mb-6 text-gray-900 dark:text-white">
+    <h4 class="text-lg font-bold">Tiendas virtuales</h4>
+    <p>Toda las tiendas asociados</p>
+  </div>
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
+    @for (item of isReportStore; track item.id) {
+    <div
+      class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6"
+    >
+      <h5
+        class="text-base font-bold leading-none text-gray-900 dark:text-white"
+      >
+        {{ item.title }}
+      </h5>
+      <p class="text-gray-600 font-bold text-3xl dark:text-gray-400 my-2">
+        {{ item.cant }}
+      </p>
+      <p class="text-gray-600 dark:text-gray-400 my-2">
+        {{ item.describe }}
+      </p>
+    </div>
+    }
+  </div>
+</div>
