--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-purple-200 border-gray-200 dark:bg-gray-800">
+<nav class="bg-purple-200 border-gray-200 dark:bg-gray-800 grid justify-end">
   <div
     class="max-w-screen-xl mx-auto p-4 md:grid md:grid-cols-12 gap-2 flex flex-wrap"
   >
