--- a/src/app/pages/admin/request-service-page/request-service-page.component.html
+++ b/src/app/pages/admin/request-service-page/request-service-page.component.html
@@ -77,9 +77,9 @@
       <p class="text-sm text-gray-700">Filas por página:</p>
       <select [(ngModel)]="itemsPerPage" (ngModelChange)="onItemsPerPageChange($event)"
         class="justify-center ml-2 block w-14 py-0 px-2 h-8 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-        <option *ngFor="let option of [4, 5, 10, 15, 20, 50]" [value]="option">
-          {{ option }}
-        </option>
+         @for (option of [5, 10, 15, 20, 50]; track $index) {
+          <option [value]="option"> {{ option }}</option>
+        }
       </select>
     </div>
     <div class="justify-end">
@@ -446,8 +446,7 @@
                 </p>
                 <p class="text-gray-600 mt-1.5 dark:text-gray-400">
                   <span class="font-semibold text-gray-800"> Estado: </span>
-                  @if (selectedSolicDemo.storeStatusService === 'Enlace
-                  enviado') {pendiente en aceptar y crear cuenta inicio sesión}
+                  @if (selectedSolicDemo.storeStatusService === 'Enlace enviado') { pendiente en aceptar y crear cuenta inicio sesión }
                   @else {
                   {{ selectedSolicDemo.storeStatusService }}
                   }
