create pipes soles

--- a/src/app/components/simple-card/simple-card.component.html
+++ b/src/app/components/simple-card/simple-card.component.html
@@ -6,7 +6,7 @@
     {{ isCardValue().title }}
   </h5>
   <p class="text-gray-600 font-bold text-3xl dark:text-gray-400 my-2">
-    {{ isCardValue().cant }}
+    {{ isCardValue().cant | soles }}
   </p>
   <p class="text-gray-600 dark:text-gray-400 my-2">
     {{ isCardValue().describe }}
