feat: agree shadow-md m-4 rounded-lg

--- a/src/app/components/chart-grafic/chart-grafic.component.html
+++ b/src/app/components/chart-grafic/chart-grafic.component.html
@@ -1,5 +1,5 @@
 <div
-  class="my-2 sm:mx-2 bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
+  class="my-2 sm:mx-2 border border-gray-200 rounded-lg shadow-sm dark:border-gray-700"
 >
   <div class="flex items-center m-6 justify-between mb-4">
     <span class="flex items-center space-x-2 justify-between w-full">
