--- a/src/app/pages/admin/list-store-page/list-store-page.component.html
+++ b/src/app/pages/admin/list-store-page/list-store-page.component.html
@@ -1,4 +1,4 @@
-<div class="px-6 text-gray-900 dark:text-white">
+<div class="px-6 text-gray-900 dark:text-white shadow-md m-4 rounded-lg">
   <div class="mb-6 text-gray-900 dark:text-white">
     <h4 class="text-lg font-bold">Tiendas virtuales</h4>
     <p>Toda las tiendas asociados</p>
@@ -8,190 +8,192 @@
     <tyn-simple-card [isCardValue]="item" />
     }
   </div>
-</div>
-<!-- Búsqueda general -->
 
-<div class="px-6 text-gray-900 dark:text-white">
-  <div class="flex items-center justify-between pb-4">
-    <div class="relative">
-      <div
-        class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
-      >
-        <svg
-          class="w-4 h-4 text-gray-500 dark:text-gray-400"
-          aria-hidden="true"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 20 20"
+  <!-- Búsqueda general -->
+
+  <div class="px-6 text-gray-900 dark:text-white">
+    <div class="flex items-center justify-between pb-4">
+      <div class="relative">
+        <div
+          class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
         >
-          <path
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-          />
-        </svg>
+          <svg
+            class="w-4 h-4 text-gray-500 dark:text-gray-400"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 20 20"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+            />
+          </svg>
+        </div>
+        <input
+          type="text"
+          [(ngModel)]="search"
+          placeholder="Buscar tienda"
+          class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+        />
       </div>
-      <input
-        type="text"
-        [(ngModel)]="search"
-        placeholder="Buscar tienda"
-        class="block w-full p-2.5 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-purple-500 focus:border-purple-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
-      />
-    </div>
-    <div class="flex items-center">
-      <span class="mx-4 text-gray-500">Fechas</span>
-      <input
-        type="date"
-        [(ngModel)]="startDate"
-        placeholder="Fecha desde"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
-      />
-      <span class="mx-4 text-gray-500">al</span>
-      <input
-        type="date"
-        [(ngModel)]="endDate"
-        placeholder="Fecha hasta"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
-      />
-    </div>
-    <!-- busqueda por estado -->
-    <div class="relative w-48">
-      <select
-        id="status"
-        (ngModelChange)="filterByStatus($event)"
-        [(ngModel)]="isState"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
-      >
-        <option ngValue="All" selected>Todos</option>
-        <option ngValue="activo">Activo</option>
-        <option ngValue="suspendido">Suspendido</option>
-      </select>
-    </div>
-  </div>
-
-  <table
-    class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 overflow-x-auto"
-  >
-    <thead
-      class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
-    >
-      <tr>
-        <th scope="col" class="px-6 py-3">Nombre</th>
-        <th scope="col" class="px-6 py-3">Departamento</th>
-        <th scope="col" class="px-6 py-3">Categoria</th>
-        <th scope="col" class="px-6 py-3 text-center">Estado</th>
-        <th scope="col" class="px-6 py-3">Plan de suscripción</th>
-        <th scope="col" class="px-6 py-3">Gastos total</th>
-        <th scope="col" class="px-6 py-3">Fecha</th>
-      </tr>
-    </thead>
-    <tbody>
-      @for (item of paginatedData; track item.id) {
-      <tr
-        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
-      >
-        <th
-          scope="row"
-          class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+      <div class="flex items-center">
+        <span class="mx-4 text-gray-500">Fechas</span>
+        <input
+          type="date"
+          [(ngModel)]="startDate"
+          placeholder="Fecha desde"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+        />
+        <span class="mx-4 text-gray-500">al</span>
+        <input
+          type="date"
+          [(ngModel)]="endDate"
+          placeholder="Fecha hasta"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
+        />
+      </div>
+      <!-- busqueda por estado -->
+      <div class="relative w-48">
+        <select
+          id="status"
+          (ngModelChange)="filterByStatus($event)"
+          [(ngModel)]="isState"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-purple-500 focus:border-purple-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-purple-500 dark:focus:border-purple-500"
         >
-          {{ item.storeName }}
-        </th>
-        <td class="px-6 py-4">{{ item.storeDepartment }}</td>
-        <td class="px-6 py-4">{{ item.storeCategory }}</td>
-        <td class="px-6 py-4 text-center">
-          <span
-            class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
-            [ngClass]="{
+          <option ngValue="All" selected>Todos</option>
+          <option ngValue="activo">Activo</option>
+          <option ngValue="suspendido">Suspendido</option>
+        </select>
+      </div>
+    </div>
+
+    <table
+      class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 overflow-x-auto"
+    >
+      <thead
+        class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"
+      >
+        <tr>
+          <th scope="col" class="px-6 py-3">Nombre</th>
+          <th scope="col" class="px-6 py-3">Departamento</th>
+          <th scope="col" class="px-6 py-3">Categoria</th>
+          <th scope="col" class="px-6 py-3 text-center">Estado</th>
+          <th scope="col" class="px-6 py-3">Plan de suscripción</th>
+          <th scope="col" class="px-6 py-3">Gastos total</th>
+          <th scope="col" class="px-6 py-3">Fecha</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (item of paginatedData; track item.id) {
+        <tr
+          class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+        >
+          <th
+            scope="row"
+            class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+          >
+            {{ item.storeName }}
+          </th>
+          <td class="px-6 py-4">{{ item.storeDepartment }}</td>
+          <td class="px-6 py-4">{{ item.storeCategory }}</td>
+          <td class="px-6 py-4 text-center">
+            <span
+              class="inline-flex items-center text-xs font-medium px-2.5 py-0.5 rounded-full"
+              [ngClass]="{
             'bg-green-100 text-green-800':
               item.status == 'activo',
             'bg-red-100 text-red-800':
               item.status === 'suspendido',
 
           }"
+            >
+              {{ item.status }}
+            </span>
+          </td>
+          <td class="px-6 py-4 text-center">{{ item.plan }}</td>
+          <td class="px-6 py-4 text-center">{{ item.planPrice }}</td>
+          <td class="px-6 py-4 text-center">
+            {{ item.planDate | date : "medium" }}
+          </td>
+        </tr>
+        }
+      </tbody>
+    </table>
+    <!-- Paginación -->
+    <nav aria-label="Page navigation example " class="my-6 flex justify-center">
+      <ul class="flex items-center -space-x-px h-8 text-sm">
+        <li>
+          <button
+            (click)="prevPage()"
+            [disabled]="currentPage === 1"
+            class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
           >
-            {{ item.status }}
-          </span>
-        </td>
-        <td class="px-6 py-4 text-center">{{ item.plan }}</td>
-        <td class="px-6 py-4 text-center">{{ item.planPrice }}</td>
-        <td class="px-6 py-4 text-center">
-          {{ item.planDate | date : "medium" }}
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
-  <!-- Paginación -->
-  <nav aria-label="Page navigation example " class="my-6 flex justify-center">
-    <ul class="flex items-center -space-x-px h-8 text-sm">
-      <li>
-        <button
-          (click)="prevPage()"
-          [disabled]="currentPage === 1"
-          class="flex items-center justify-center px-3 h-8 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Previous</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
+            <span class="sr-only">Previous</span>
+            <svg
+              class="w-2.5 h-2.5 rtl:rotate-180"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 6 10"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M5 1 1 5l4 4"
+              />
+            </svg>
+          </button>
+        </li>
+        <!-- Números de página generados dinámicamente -->
+        @for (page of [].constructor(totalPages()); track page; let i = $index)
+        {
+        <li>
+          <button
+            (click)="setPage(i + 1)"
+            [ngClass]="{
+              'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
+                currentPage === i + 1,
+              'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
+                currentPage !== i + 1
+            }"
+            class="flex items-center justify-center px-3 h-8 leading-tight border"
           >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M5 1 1 5l4 4"
-            />
-          </svg>
-        </button>
-      </li>
-      <!-- Números de página generados dinámicamente -->
-      @for (page of [].constructor(totalPages()); track page; let i = $index) {
-      <li>
-        <button
-          (click)="setPage(i + 1)"
-          [ngClass]="{
-            'z-10 text-purple-600 border-purple-400 bg-purple-300 hover:bg-purple-100 hover:text-purple-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white':
-              currentPage === i + 1,
-            'text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white':
-              currentPage !== i + 1
-          }"
-          class="flex items-center justify-center px-3 h-8 leading-tight border"
-        >
-          {{ i + 1 }}
-        </button>
-      </li>
-      }
+            {{ i + 1 }}
+          </button>
+        </li>
+        }
 
-      <li>
-        <button
-          (click)="nextPage()"
-          [disabled]="currentPage === totalPages()"
-          class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-        >
-          <span class="sr-only">Next</span>
-          <svg
-            class="w-2.5 h-2.5 rtl:rotate-180"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 6 10"
+        <li>
+          <button
+            (click)="nextPage()"
+            [disabled]="currentPage === totalPages()"
+            class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
           >
-            <path
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="m1 9 4-4-4-4"
-            />
-          </svg>
-        </button>
-      </li>
-    </ul>
-  </nav>
+            <span class="sr-only">Next</span>
+            <svg
+              class="w-2.5 h-2.5 rtl:rotate-180"
+              aria-hidden="true"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 6 10"
+            >
+              <path
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="m1 9 4-4-4-4"
+              />
+            </svg>
+          </button>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
