--- a/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
+++ b/src/app/pages/admin/list-user-admin-page/list-user-admin-page.component.html
@@ -1,4 +1,4 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10">
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-10 m-4">
   <div
     class="mb-6 text-gray-900 dark:text-white flex items-center justify-between"
   >
