--- a/src/app/pages/admin/panel-page/panel-page.component.html
+++ b/src/app/pages/admin/panel-page/panel-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen p-4">
+<div class="flex flex-col min-h-screen p-4 shadow-md m-4 rounded-lg">
   <div class="flex items-center justify-between mb-6">
     <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">
       Panel de Control
