--- a/src/app/pages/admin/revenue-page/revenue-page.component.html
+++ b/src/app/pages/admin/revenue-page/revenue-page.component.html
@@ -1,7 +1,9 @@
 <div class="px-6 text-gray-900 dark:text-white">
   <div class="mb-6 text-gray-900 dark:text-white flex justify-between">
     <div>
-      <h4 class="text-lg font-bold">Ganancias</h4>
+      <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">
+      Ganancias
+    </h1>
       <p>
         Se mostraran toda las ganancias que se generan del uso de la plataforma
         tynbiz, como mencionaremos de ganancias de plan de suscripcion. Cada
@@ -19,13 +21,13 @@
   </div>
   <h4 class="text-lg font-bold mb-2">Plan de suscripcion</h4>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
-    @for (item of isReportStore; track item.id) {
-    <tyn-simple-card [isCardValue]="item" />
+    @for (item of reportStore; track item.id) {
+    <tyn-simple-card [isCardValue]="item" [tipeCant]="'monto'" />
     }
   </div>
-  <h4 class="text-lg font-bold mb-2">Ganancias</h4>
+  <h4 class="text-lg font-bold mb-2">Ganancias de suscripción</h4>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
-    @for (item of isReportSubscription; track item.id) {
+    @for (item of reportSubscription; track item.id) {
     <tyn-simple-card [isCardValue]="item" />
     }
   </div>
