--- a/src/app/pages/admin/list-store-page/list-store-page.component.html
+++ b/src/app/pages/admin/list-store-page/list-store-page.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
     @for (item of isReportStore; track item.id) {
-    <tyn-simple-card [isCardValue]="item" />
+    <tyn-simple-card [isCardValue]="item" [tipeCant]="'monto'" />
     }
   </div>
 </div>
