--- a/src/app/pages/admin/payment-page/payment-page.component.html
+++ b/src/app/pages/admin/payment-page/payment-page.component.html
@@ -19,14 +19,38 @@
     <div class="grid grid-cols-2 md:grid-cols-4 gap-2 m-6">
       @for (item of listMethods; track item.id) {
       <div class="flex flex-col h-full">
-        <div
-          class="relative h-36 w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 overflow-hidden flex items-center justify-center">
-          @if (item.img == null) {
-          <h5 class="text-base font-bold text-center text-gray-900 dark:text-white">
-            {{ item.method }}
-          </h5>} @else {
-          <img [src]="item.img" alt="" class="absolute inset-0 h-full w-full object-cover ">
-          }
+        <div class="relative">
+          <!-- Card con imagen o texto centrado -->
+          <div
+            class="h-36 w-full bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 overflow-hidden flex items-center justify-center">
+            @if (item.img == null) {
+            <h5 class="text-base font-bold text-center text-gray-900 dark:text-white">
+              {{ item.title }}
+            </h5>
+            } @else {
+            <img [src]="item.img" alt="" class="absolute inset-0 h-full w-full object-cover rounded-lg" />
+            }
+          </div>
+
+          <!-- Botón tres puntos arriba derecha -->
+          <button (click)="toggleDropdown(item)" class="absolute top-2 right-2 p-1 rounded ">
+            <svg class="w-4 h-4 text-gray-500 dark:text-gray-400 hover:text-gray-800" xmlns="http://www.w3.org/2000/svg"
+              fill="currentColor" viewBox="0 0 4 15">
+              <path
+                d="M3.5 1.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 6.041a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Zm0 5.959a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
+            </svg>
+          </button>
+
+          <!-- Dropdown con opciones -->
+          <div *ngIf="openDropdownIndex === item.id"
+            class="absolute top-6 right-2 mt-2 w-40 bg-white border border-purple-400 rounded-md shadow-lg z-50 dark:bg-purple-700">
+            <ul class="text-sm text-gray-700 dark:text-gray-200">
+              @if (item.estate == 'inactivo') {<li (click)="openModalWar('activar')"
+                class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">Activar</li>}@else {<li
+                (click)="openModalWar('desactivar')"
+                class="px-4 py-2 hover:bg-purple-300 dark:hover:bg-purple-600 cursor-pointer">Desactivar</li>}
+            </ul>
+          </div>
         </div>
         <div class="mt-1">
           <span [ngClass]="{' text-green-600': item.estate === 'activo', ' text-red-600': item.estate === 'inactivo' }">
@@ -42,20 +66,16 @@
     <h1 class="text-2xl font-semibold">Pagos realizados por tiendas virtuales en suscripccion</h1>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-2 m-6">
       @for (item of listMethods; track item.id) {
-      <div
-        class="bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 p-4 md:p-6">
-        <h5 class="text-base font-bold leading-none text-gray-900 dark:text-white">
-          {{ item.method }}
-        </h5>
-        <p class="text-gray-600 font-bold text-3xl dark:text-gray-400 my-2">
-          {{ item.users }}
-        </p>
-        <p class="text-gray-600 dark:text-gray-400 my-2">
-          {{ item.description }}
-        </p>
-      </div>
+      <tyn-simple-card [isCardValue]="item" [tipeCant]="'cantidad'" />
       }
+
+
     </div>
 
   </div>
 </div>
+
+<tyn-warning-modal [visible]="modalVisible" [itemName]="selectedMethod?.method"
+  [actionLabel]="currentAction === 'activar' ? 'Activar' : 'Desactivar'" [actionType]="currentAction"
+  (confirm)="confirmAction()" (cancel)="closeModalWar()">
+</tyn-warning-modal>
