--- a/src/app/pages/admin/request-service-page/request-service-page.component.html
+++ b/src/app/pages/admin/request-service-page/request-service-page.component.html
@@ -74,7 +74,7 @@
   <!-- Paginación -->
   <div class="flex justify-between">
     <div class="flex my-6 items-center">
-      <p class="text-sm text-gray-700">Filas por página:</p>
+      <p class="text-sm text-gray-700 dark:text-gray-400">Filas por página:</p>
       <select [(ngModel)]="itemsPerPage" (ngModelChange)="onItemsPerPageChange($event)"
         class="justify-center ml-2 block w-14 py-0 px-2 h-8 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
          @for (option of [5, 10, 15, 20, 50]; track $index) {
